句子，和语法的显示，句子的添加正在开发中

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
 
         <activity android:name=".sentences.SentencesActivity"/>
 
+        <activity android:name=".grammars.GrammarsActivity"/>
+
+        <activity android:name=".addeditsentence.AddEditSentenceActivity"/>
+
     </application>
 
 </manifest>
