语法添加和显示完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         <activity android:name=".addeditsentence.AddEditSentenceActivity"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".addeditgrammar.AddEditGrammarActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
