--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
+    //Bmob需要的2
+    //兼容Android6.0系统所需，如果这句话报错，可在dependencies标签下使用compile 'cn.bmob.android:http-legacy:1.0'
+    useLibrary 'org.apache.http.legacy'
+
     defaultConfig {
         applicationId "com.englishlearn.myapplication"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -26,6 +30,8 @@ android {
     //anddroidTest需要配置的(2)
     packagingOptions {
         exclude 'LICENSE.txt'
+        //Bmob需要的5 rxjava 会和 bmob冲突
+        exclude 'META-INF/rxjava.properties'
     }
 }
 
@@ -71,4 +77,8 @@ dependencies {
     androidTestCompile ("com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion")
     androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"
 
+    //Bmob需要的3
+    compile 'cn.bmob.android:bmob-sdk:3.5.0'
+    //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
+    compile 'cn.bmob.android:http-legacy:1.0'
 }
