--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,11 @@
         </activity>
 
         <activity android:name=".sentences.SentencesActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait">
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+            </activity>
 
         <activity android:name=".grammars.GrammarsActivity"
             android:screenOrientation="portrait"/>
@@ -50,6 +54,14 @@
 
         <activity android:name=".sentencedetail.SentenceDetailActivity"
             android:screenOrientation="portrait"/>
+
+        <activity android:name=".searchresults.SearchResultsActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+        </activity>
 
     </application>
 
