--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,6 @@
             android:screenOrientation="portrait"
             android:launchMode="singleTop">
 
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
             </activity>
@@ -62,8 +58,8 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".searchresults.SearchResultsActivity"
-            android:screenOrientation="portrait">
-
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
         </activity>
 
     </application>
