--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
 
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
             </activity>
 
         <activity android:name=".grammars.GrammarsActivity"
@@ -58,9 +63,13 @@
             android:screenOrientation="portrait"/>
 
         <activity android:name=".searchresults.SearchResultsActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop">
+            android:screenOrientation="portrait">
         </activity>
+
+        <provider
+            android:name=".provide.SuggestionsProvider"
+            android:authorities=".provide.SuggestionsProvider"
+            android:exported="false" />
 
     </application>
 
