--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,16 +35,7 @@
         </activity>
 
         <activity android:name=".sentences.SentencesActivity"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop">
-
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-
+            android:screenOrientation="portrait">
             </activity>
 
         <activity android:name=".grammars.GrammarsActivity"
@@ -62,13 +53,22 @@
         <activity android:name=".sentencedetail.SentenceDetailActivity"
             android:screenOrientation="portrait"/>
 
-        <activity android:name=".searchresults.SearchResultsActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".search.SearchActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
         </activity>
 
         <provider
             android:name=".provide.SuggestionsProvider"
-            android:authorities=".provide.SuggestionsProvider"
+            android:authorities="com.englishlearn.myapplication.provide.SuggestionsProvider"
             android:exported="false" />
 
     </application>
