--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,17 @@
         </activity>
 
         <activity android:name=".sentences.SentencesActivity"
-            android:screenOrientation="portrait">
-            </activity>
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+        </activity>
 
         <activity android:name=".grammars.GrammarsActivity"
             android:screenOrientation="portrait"/>
