--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
 
         </activity>
 
+        <activity android:name=".searchsentences.SearchSentencesActivity"
+            android:screenOrientation="portrait"/>
+
         <activity android:name=".grammars.GrammarsActivity"
             android:screenOrientation="portrait"/>
 
