--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
+    compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
 
     //测试库
     testCompile "junit:junit:$rootProject.ext.junitVersion"
@@ -73,9 +75,9 @@ dependencies {
     androidTestCompile "com.android.support.test:rules:$rootProject.ext.runnerVersion"
 
     // Espresso UI Testing
-    androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
+   /* androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
     androidTestCompile ("com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion")
-    androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"*/
 
     //Bmob需要的3
     /*compile 'cn.bmob.android:bmob-sdk:3.5.0'
