--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -129,6 +129,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".common.CommonActivity"/>
+        <activity
+            android:name=".phoneticssymbols.phoneticsdetails.PhoneticsDetailsActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
