--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxjava:1.1.5'
 
+    //图片加载库
+    compile 'com.github.bumptech.glide:glide:3.6.0'
+
     //Volley
     compile 'com.mcxiaoke.volley:library:1.0.19'
 
