詞单列表，分页加载未完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,12 +138,11 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".grammars.GrammarsActivity"
-            android:screenOrientation="portrait"></activity>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".grammardetail.GrammarDetailActivity"
-            android:screenOrientation="portrait"></activity>
-
+            android:screenOrientation="portrait" />
+        <activity android:name=".wordgroups.WordGroupsActivity"></activity>
     </application>
 
 </manifest>
