--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,7 +142,10 @@
         <activity
             android:name=".grammardetail.GrammarDetailActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".wordgroups.WordGroupsActivity"></activity>
+        <activity android:name=".wordgroups.WordGroupsActivity" />
+        <activity
+            android:name=".wordgroups.words.WordsActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
