--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -156,13 +156,17 @@
             android:name=".tractategroup.TractateGroupsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".tractategroup.tractates.TractatesActivity"
+            android:name=".tractategroup.tractates.Tractates1Activity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".tractategroup.tractates.tractate.TractateDetailActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
-        <service android:name=".service.MusicService"/>
+        <service android:name=".service.MusicService" />
+
+        <activity
+            android:name=".tractategroup.tractates.TractatesActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
