添加文章预览

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,6 +169,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".tractategroup.addtractate.AddTractateActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".tractategroup.preview.TractatePreviewActivity"
             android:screenOrientation="portrait"></activity>
     </application>
 
