添加句子收藏完成，添加句单收藏完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,6 +169,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".sentencegroups.sentences.sentencecollect.CreateSentenceActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activityforresult.multiple.MultipleActivity"
             android:screenOrientation="portrait"></activity>
     </application>
 
