句子功能完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".sentencegroups.SentenceGroupsActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".sentencegroups.sentences.SentencesActivity"
