文章功能完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -149,6 +149,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".tractategroup.TractateGroupsActivity"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".tractategroup.tractates.TractatesActivity"
