--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,23 +42,20 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(include: '*.jar', dir: 'libs')
     //兼容库
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
-
     //测试库
     testCompile "junit:junit:$rootProject.ext.junitVersion"
     testCompile "org.mockito:mockito-core:$rootProject.ext.mockitoVersion"
-
     testCompile "org.powermock:powermock-module-junit4:$rootProject.powerMockito"
     testCompile "org.powermock:powermock-api-mockito:$rootProject.powerMockito"
     testCompile "org.powermock:powermock-core:$rootProject.powerMockito"
-
     //rx系列库
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxjava:1.1.5'
@@ -70,31 +67,25 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.4'
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'com.google.dagger:dagger:2.4'
-
     //androidTest 安卓环境测试(3)
     // Resolve conflicts between main and test APK:
     androidTestCompile "com.android.support:support-annotations:$rootProject.supportLibraryVersion"
     androidTestCompile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
-
     // Android Testing Support Library's runner and rules
     androidTestCompile "com.android.support.test:runner:$rootProject.ext.runnerVersion"
     androidTestCompile "com.android.support.test:rules:$rootProject.ext.runnerVersion"
     // Espresso UI Testing
     /* androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
-    androidTestCompile ("com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion")
-    androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"*/
-
+        androidTestCompile ("com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion")
+        androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"*/
     //Bmob需要的3
     /*compile 'cn.bmob.android:bmob-sdk:3.5.0'
-    //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
-    compile 'cn.bmob.android:http-legacy:1.0'*/
-
+        //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
+        compile 'cn.bmob.android:http-legacy:1.0'*/
     //Retrofit网絡请求框架
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
-
-
+    compile files('libs/jsoup-1.9.2.jar')
 }
