--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,26 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 允许读取手机状态 用于创建BmobInstallation -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- <uses-permission android:name="android.permission.SET_ORIENTATION" /> -->
+    <uses-permission android:name="android.permission.GET_CLIPS" />
+    <uses-permission android:name="android.permission.READ_CLIPS" />
+    <uses-permission android:name="android.permission.WRITE_CLIPS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+    <!-- 网络通信权限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- SD卡写入数据权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- SD卡创建与删除权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
+    <!-- DownloadManager下载时不显示Notification -->
+    <!-- VISIBILITY_HIDDEN表示不显示任何通知栏提示的权限 -->
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
+
+    <!-- DownloadManager -->
+    <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
 
     <application
         android:name=".MyApplication"
@@ -183,28 +203,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".dict.DictActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".test.dialog.DialogActivity"></activity>
     </application>
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <!-- <uses-permission android:name="android.permission.SET_ORIENTATION" /> -->
-    <uses-permission android:name="android.permission.GET_CLIPS"/>
-    <uses-permission android:name="android.permission.READ_CLIPS"/>
-    <uses-permission android:name="android.permission.WRITE_CLIPS"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-
-    <!--网络通信权限-->
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <!--SD卡写入数据权限-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <!--SD卡创建与删除权限-->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-
-    <!--DownloadManager下载时不显示Notification-->
-    <!--VISIBILITY_HIDDEN表示不显示任何通知栏提示的权限-->
-    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
-
-    <!--DownloadManager-->
-    <uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
 
 </manifest>
