--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,12 +76,12 @@ dependencies {
     androidTestCompile "com.android.support.test:rules:$rootProject.ext.runnerVersion"
     // Espresso UI Testing
     /* androidTestCompile "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
-                    androidTestCompile ("com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion")
-                    androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"*/
+                        androidTestCompile ("com.android.support.test.espresso:espresso-contrib:$rootProject.espressoVersion")
+                        androidTestCompile "com.android.support.test.espresso:espresso-intents:$rootProject.espressoVersion"*/
     //Bmob需要的3
     /*compile 'cn.bmob.android:bmob-sdk:3.5.0'
-                    //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
-                    compile 'cn.bmob.android:http-legacy:1.0'*/
+                        //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
+                        compile 'cn.bmob.android:http-legacy:1.0'*/
     //Retrofit网絡请求框架
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
@@ -90,4 +90,5 @@ dependencies {
     compile files('libs/jsoup-1.9.2.jar')
     compile files('libs/commons-io-2.5.jar')
     compile files('src/main/jniLibs/jave-1.0.2.jar')
+    //compile project(':library')
 }
